--- a/index.html
+++ b/index.html
@@ -1,13 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="undefined" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/styles.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Pizza Parlor</h1>
+    <h2>Order Your Pizza Here:</h2>
+    <form id="new-contact">
+      <div class="form-group">
+        <label for="size">Size:</label>
+        <select class="form-control"  id="size">
+          <option value="small">Small</option>
+          <option value="medium">Medium</option>
+          <option value="large">Large</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="crust">Type of Crust:</label>
+        <select class="form-control" id="crust">
+          <option value="thin">Thin</option>
+          <option value="traditional">Traditional</option>
+          <option value="thick">Thick</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="sauce">Type of Sauce:</label>
+        <select class="form-control" id="sauce">
+          <option value="thin">Pesto</option>
+          <option value="traditional">Traditional</option>
+          <option value="thick">No Sauce</option>
+        </select>
+      </div>
+      <div id="toppings">
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="olives" value="Olives">
+          <label class="form-check-label" for="olives">Olives</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="jalapenos" value="Jalapenos">
+          <label class="form-check-label" for="jalapenos">Jalapenos</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="basil" value="Basil">
+          <label class="form-check-label" for="basil">Basil</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="mushrooms" value="Mushrooms">
+          <label class="form-check-label" for="mushrooms">Mushrooms</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="bell-peppers" value="Bell Peppers">
+          <label class="form-check-label" for="bell-peppers">Bell Peppers</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="pineapple" value="pineapple">
+          <label class="form-check-label" for="pineapple">Pineapples</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="ham" value="ham">
+          <label class="form-check-label" for="ham">Ham</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="chicken" value="Chicken">
+          <label class="form-check-label" for="chicken">Chicken</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="pepperoni" value="Pepperoni">
+          <label class="form-check-label" for="pepperoni">Pepperoni</label>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-success" id="submit">Order Up!</button>
+    </form>
+  </div>
 </body>
 </html>
