WIP: Add user interface logic to get values from input fields.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <h1>Pizza Parlor</h1>
     <h2>Order Your Pizza Here:</h2>
-    <form id="new-contact">
+    <form id="pizza-order">
       <div class="form-group">
         <label for="size">Size:</label>
         <select class="form-control"  id="size">
@@ -39,41 +39,41 @@
           <option value="thick">No Sauce</option>
         </select>
       </div>
-      <div id="toppings">
+      <div id="toppings-container">
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="olives" value="Olives">
+          <input class="form-check-input" type="checkbox" name="toppings" value="Olives">
           <label class="form-check-label" for="olives">Olives</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="jalapenos" value="Jalapenos">
+          <input class="form-check-input" type="checkbox" name="toppings" value="Jalapenos">
           <label class="form-check-label" for="jalapenos">Jalapenos</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="basil" value="Basil">
+          <input class="form-check-input" type="checkbox" name="toppings" value="Basil">
           <label class="form-check-label" for="basil">Basil</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="mushrooms" value="Mushrooms">
+          <input class="form-check-input" type="checkbox" name="toppings"  value="Mushrooms">
           <label class="form-check-label" for="mushrooms">Mushrooms</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="bell-peppers" value="Bell Peppers">
+          <input class="form-check-input" type="checkbox" name="toppings" value="Bell Peppers">
           <label class="form-check-label" for="bell-peppers">Bell Peppers</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="pineapple" value="pineapple">
+          <input class="form-check-input" type="checkbox" name="toppings"  value="pineapple">
           <label class="form-check-label" for="pineapple">Pineapples</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="ham" value="ham">
+          <input class="form-check-input" type="checkbox" name="toppings" value="ham">
           <label class="form-check-label" for="ham">Ham</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="chicken" value="Chicken">
+          <input class="form-check-input" type="checkbox" name=""  value="Chicken">
           <label class="form-check-label" for="chicken">Chicken</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="pepperoni" value="Pepperoni">
+          <input class="form-check-input" type="checkbox" name=""  value="Pepperoni">
           <label class="form-check-label" for="pepperoni">Pepperoni</label>
         </div>
       </div>
