--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <div class="form-group">
         <label for="sauce">Type of Sauce:</label>
         <select class="form-control" id="sauce">
-          <option value="thin">Pesto</option>
+          <option value="pesto">Pesto</option>
           <option value="traditional">Traditional</option>
-          <option value="thick">No Sauce</option>
+          <option value="no sauce">No Sauce</option>
         </select>
       </div>
       <div id="toppings-container">
@@ -69,11 +69,11 @@
           <label class="form-check-label" for="ham">Ham</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" name=""  value="Chicken">
+          <input class="form-check-input" type="checkbox" name="toppings"  value="Chicken">
           <label class="form-check-label" for="chicken">Chicken</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" name=""  value="Pepperoni">
+          <input class="form-check-input" type="checkbox" name="toppings"  value="Pepperoni">
           <label class="form-check-label" for="pepperoni">Pepperoni</label>
         </div>
       </div>
