--- a/index.html
+++ b/index.html
@@ -12,73 +12,78 @@
 </head>
 <body>
   <div class="container">
-    <h1>Pizza Parlor</h1>
-    <h2>Order Your Pizza Here:</h2>
-    <form id="pizza-order">
-      <div class="form-group">
-        <label for="size">Size:</label>
-        <select class="form-control"  id="size">
-          <option value="small">Small</option>
-          <option value="medium">Medium</option>
-          <option value="large">Large</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="crust">Type of Crust:</label>
-        <select class="form-control" id="crust">
-          <option value="thin">Thin</option>
-          <option value="traditional">Traditional</option>
-          <option value="thick">Thick</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="sauce">Type of Sauce:</label>
-        <select class="form-control" id="sauce">
-          <option value="pesto">Pesto</option>
-          <option value="traditional">Traditional</option>
-          <option value="no sauce">No Sauce</option>
-        </select>
-      </div>
-      <div id="toppings-container">
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" name="toppings" value="Olives">
-          <label class="form-check-label" for="olives">Olives</label>
+    <div id="pizza-order-form-container">
+      <h1>Pizza Parlor</h1>
+      <h2>Order Your Pizza Here:</h2>
+      <form id="pizza-order-form">
+        <div class="form-group">
+          <label for="size">Size:</label>
+          <select class="form-control"  id="size">
+            <option value="small">Small</option>
+            <option value="medium">Medium</option>
+            <option value="large">Large</option>
+          </select>
         </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" name="toppings" value="Jalapenos">
-          <label class="form-check-label" for="jalapenos">Jalapenos</label>
+        <div class="form-group">
+          <label for="crust">Type of Crust:</label>
+          <select class="form-control" id="crust">
+            <option value="thin">Thin</option>
+            <option value="traditional">Traditional</option>
+            <option value="thick">Thick</option>
+          </select>
         </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" name="toppings" value="Basil">
-          <label class="form-check-label" for="basil">Basil</label>
+        <div class="form-group">
+          <label for="sauce">Type of Sauce:</label>
+          <select class="form-control" id="sauce">
+            <option value="pesto">Pesto</option>
+            <option value="traditional">Traditional</option>
+            <option value="no sauce">No Sauce</option>
+          </select>
         </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" name="toppings"  value="Mushrooms">
-          <label class="form-check-label" for="mushrooms">Mushrooms</label>
+        <div id="toppings-container">
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" name="toppings" value="Olives">
+            <label class="form-check-label" for="olives">Olives</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" name="toppings" value="Jalapenos">
+            <label class="form-check-label" for="jalapenos">Jalapenos</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" name="toppings" value="Basil">
+            <label class="form-check-label" for="basil">Basil</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" name="toppings"  value="Mushrooms">
+            <label class="form-check-label" for="mushrooms">Mushrooms</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" name="toppings" value="Bell Peppers">
+            <label class="form-check-label" for="bell-peppers">Bell Peppers</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" name="toppings"  value="pineapple">
+            <label class="form-check-label" for="pineapple">Pineapples</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" name="toppings" value="ham">
+            <label class="form-check-label" for="ham">Ham</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" name="toppings"  value="Chicken">
+            <label class="form-check-label" for="chicken">Chicken</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" name="toppings"  value="Pepperoni">
+            <label class="form-check-label" for="pepperoni">Pepperoni</label>
+          </div>
         </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" name="toppings" value="Bell Peppers">
-          <label class="form-check-label" for="bell-peppers">Bell Peppers</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" name="toppings"  value="pineapple">
-          <label class="form-check-label" for="pineapple">Pineapples</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" name="toppings" value="ham">
-          <label class="form-check-label" for="ham">Ham</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" name="toppings"  value="Chicken">
-          <label class="form-check-label" for="chicken">Chicken</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" name="toppings"  value="Pepperoni">
-          <label class="form-check-label" for="pepperoni">Pepperoni</label>
-        </div>
-      </div>
-      <button type="submit" class="btn btn-success" id="submit">Order Up!</button>
-    </form>
+        <button type="submit" class="btn btn-success" id="submit">Order Up!</button>
+      </form>
+    </div>
+    <div id="pizza-order-container">
+      
+    </div>
   </div>
 </body>
 </html>
