Add UI logic to display user inputs and total price

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
       </form>
     </div>
     <div id="pizza-order-container">
-      
+      <ul id="orders">
+        
+      </ul>
     </div>
   </div>
 </body>
