--- a/index.html
+++ b/index.html
@@ -40,50 +40,56 @@
             <option value="no sauce">No Sauce</option>
           </select>
         </div>
-        <div id="toppings-container">
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" name="toppings" value="Olives">
-            <label class="form-check-label" for="olives">Olives</label>
+        <div id="toppings-container" class="card">
+          <div class="card-header">
+            Select Your Toppings:
           </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" name="toppings" value="Jalapenos">
-            <label class="form-check-label" for="jalapenos">Jalapenos</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" name="toppings" value="Basil">
-            <label class="form-check-label" for="basil">Basil</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" name="toppings"  value="Mushrooms">
-            <label class="form-check-label" for="mushrooms">Mushrooms</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" name="toppings" value="Bell Peppers">
-            <label class="form-check-label" for="bell-peppers">Bell Peppers</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" name="toppings"  value="pineapple">
-            <label class="form-check-label" for="pineapple">Pineapples</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" name="toppings" value="ham">
-            <label class="form-check-label" for="ham">Ham</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" name="toppings"  value="Chicken">
-            <label class="form-check-label" for="chicken">Chicken</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" name="toppings"  value="Pepperoni">
-            <label class="form-check-label" for="pepperoni">Pepperoni</label>
+          <div class="card-body">
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" name="toppings" value="Olives">
+              <label class="form-check-label" for="olives">Olives</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" name="toppings" value="Jalapenos">
+              <label class="form-check-label" for="jalapenos">Jalapenos</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" name="toppings" value="Basil">
+              <label class="form-check-label" for="basil">Basil</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" name="toppings"  value="Mushrooms">
+              <label class="form-check-label" for="mushrooms">Mushrooms</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" name="toppings" value="Bell Peppers">
+              <label class="form-check-label" for="bell-peppers">Bell Peppers</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" name="toppings"  value="pineapple">
+              <label class="form-check-label" for="pineapple">Pineapples</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" name="toppings" value="ham">
+              <label class="form-check-label" for="ham">Ham</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" name="toppings"  value="Chicken">
+              <label class="form-check-label" for="chicken">Chicken</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" name="toppings"  value="Pepperoni">
+              <label class="form-check-label" for="pepperoni">Pepperoni</label>
+            </div>
           </div>
         </div>
         <button type="submit" class="btn btn-success" id="submit">Order Up!</button>
       </form>
     </div>
     <div id="pizza-order-container">
-      <ul id="orders">
-        
+      <h3>Your Order</h3>
+      <ul id="orders" class="list-group list-group-flush">
+
       </ul>
     </div>
   </div>
