--- a/index.html
+++ b/index.html
@@ -5,92 +5,105 @@
   <script src="js/scripts.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="undefined" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kirang+Haerang&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Pizza Parlor</title>
 </head>
 <body>
-  <div class="container">
-    <div id="pizza-order-form-container">
-      <h1>Pizza Parlor</h1>
-      <h2>Order Your Pizza Here:</h2>
-      <form id="pizza-order-form">
-        <div class="form-group">
-          <label for="size">Size:</label>
-          <select class="form-control"  id="size">
-            <option value="small">Small</option>
-            <option value="medium">Medium</option>
-            <option value="large">Large</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="crust">Type of Crust:</label>
-          <select class="form-control" id="crust">
-            <option value="thin">Thin</option>
-            <option value="traditional">Traditional</option>
-            <option value="thick">Thick</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="sauce">Type of Sauce:</label>
-          <select class="form-control" id="sauce">
-            <option value="pesto">Pesto</option>
-            <option value="traditional">Traditional</option>
-            <option value="no sauce">No Sauce</option>
-          </select>
-        </div>
-        <div id="toppings-container" class="card">
-          <div class="card-header">
-            Select Your Toppings:
+  <div class="background">
+    <div class="container">
+      <div id="pizza-order-form-container">
+        <h1>Pizza Parlor</h1>
+        <h2>Place Your Order:</h2>
+        <form id="pizza-order-form">
+          <div class="form-group">
+            <label for="size">Size:</label>
+            <select class="form-control"  id="size">
+              <option value="small">Small</option>
+              <option value="medium">Medium</option>
+              <option value="large">Large</option>
+            </select>
           </div>
-          <div class="card-body">
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" name="toppings" value="Olives">
-              <label class="form-check-label" for="olives">Olives</label>
+          <div class="form-group">
+            <label for="crust">Type of Crust:</label>
+            <select class="form-control" id="crust">
+              <option value="thin">Thin</option>
+              <option value="traditional">Traditional</option>
+              <option value="thick">Thick</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="sauce">Type of Sauce:</label>
+            <select class="form-control" id="sauce">
+              <option value="pesto">Pesto</option>
+              <option value="traditional">Traditional</option>
+              <option value="no sauce">No Sauce</option>
+            </select>
+          </div>
+          <div id="toppings-container" class="card">
+            <div class="card-header">
+              Select Your Toppings:
             </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" name="toppings" value="Jalapenos">
-              <label class="form-check-label" for="jalapenos">Jalapenos</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" name="toppings" value="Basil">
-              <label class="form-check-label" for="basil">Basil</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" name="toppings"  value="Mushrooms">
-              <label class="form-check-label" for="mushrooms">Mushrooms</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" name="toppings" value="Bell Peppers">
-              <label class="form-check-label" for="bell-peppers">Bell Peppers</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" name="toppings"  value="pineapple">
-              <label class="form-check-label" for="pineapple">Pineapples</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" name="toppings" value="ham">
-              <label class="form-check-label" for="ham">Ham</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" name="toppings"  value="Chicken">
-              <label class="form-check-label" for="chicken">Chicken</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" name="toppings"  value="Pepperoni">
-              <label class="form-check-label" for="pepperoni">Pepperoni</label>
+            <div class="card-body">
+              <div class="form-check form-check-inline">
+                <label class="form-check-label" for="olives">
+                  <input class="form-check-input" type="checkbox" name="toppings" value="Olives" id="olives">
+                  Olives</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <label class="form-check-label" for="jalapenos">
+                  <input class="form-check-input" type="checkbox" name="toppings" value="Jalapenos" id="jalapenos">
+                Jalapenos</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <label class="form-check-label" for="basil">
+                  <input class="form-check-input" type="checkbox" name="toppings" value="Basil" id="basil">
+                Basil</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <label class="form-check-label" for="mushrooms">
+                  <input class="form-check-input" type="checkbox" name="toppings"  value="Mushrooms" id="mushrooms">
+                Mushrooms</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <label class="form-check-label" for="bell-peppers">
+                  <input class="form-check-input" type="checkbox" name="toppings" value="Bell Peppers" id="bell-peppers">
+                Bell Peppers</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <label class="form-check-label" for="pineapple">
+                  <input class="form-check-input" type="checkbox" name="toppings"  value="pineapple" id="pineapple">
+                Pineapples</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <label class="form-check-label" for="ham">
+                  <input class="form-check-input" type="checkbox" name="toppings" value="ham" id="ham">
+                Ham</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <label class="form-check-label" for="chicken">
+                  <input class="form-check-input" type="checkbox" name="toppings"  value="Chicken" id="chicken">
+                Chicken</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <label class="form-check-label" for="pepperoni">
+                  <input class="form-check-input" type="checkbox" name="toppings"  value="Pepperoni" id="pepperoni">
+                Pepperoni</label>
+              </div>
             </div>
           </div>
-        </div>
-        <button type="submit" class="btn btn-success" id="submit">Order Up!</button>
-      </form>
-    </div>
-    <div id="pizza-order-container">
-      <h3>Your Order</h3>
-      <ul id="orders" class="list-group list-group-flush">
-
-      </ul>
+          <button type="submit" class="btn-lg btn-success" id="submit">Order Up!</button>
+        </form>
+      </div>
+      <div id="pizza-order-container">
+        <h3>Your Order</h3>
+        <ul id="orders" class="list-group list-group-flush">
+        </ul>
+      </div>
     </div>
   </div>
 </body>
